# newnode

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .lsan.supp  .travis.yml  CMakeLists.txt  Dockerfile  GSOC_ideas_list  GSOC_tasks  NewNode.podspec  Package.swift  README.md  android.c  android_export_list  backtrace.c  backtrace.h  base64.c  base64.h  bev_splice.c  bev_splice.h  bufferevent_utp.c  bufferevent_utp.h  build.android.sh  build.apple.sh  build.ios.sh  build.sh  clean.sh  client.c  client.h  client_main.c  config.c  config.h  constants.h  d2d.c  d2d.h  dht.c  dht.cpp  dht.h  dns_prefetch.c  (+43 more)
NewNode.xcframework/: Info.plist
NewNode.xcframework/ios-arm64/Headers/: NewNode.h  module.modulemap
NewNode.xcframework/ios-arm64_x86_64-simulator/Headers/: NewNode.h
NewNode.xcframework/ios-x86_64-maccatalyst/Headers/: NewNode.h
android/: bintray.gradle  build.gradle  gradle.properties  lib-proguard-rules.txt  maven.gradle  settings.gradle
android/examples/WebViewSample/: build.gradle  settings.gradle
android/examples/WebViewSample/app/: build.gradle
android/examples/WebViewSample/app/src/main/: AndroidManifest.xml
android/examples/WebViewSample/dcdn/: build.gradle
android/examples/WebViewSample/gradle/wrapper/: gradle-wrapper.properties
android/examples/WebViewSample/newnode/: build.gradle
android/examples/flutter/: pubspec.yaml
android/examples/flutter/android/app/: build.gradle
android/examples/flutter/lib/: main.dart
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/res/values/: strings.xml
android/vpn/: build.gradle  gradle.properties  import-summary.txt  settings.gradle
android/vpn/app/: build.gradle
android/vpn/app/src/main/: AndroidManifest.xml
android/vpn/gradle/wrapper/: gradle-wrapper.properties
android/vpn/newnode/: build.gradle
apps/: proxy.c
bugsnag/: bugsnag_ndk.c  bugsnag_ndk.h  bugsnag_ndk_report.c  bugsnag_ndk_report.h  bugsnag_unwind.c  bugsnag_unwind.h
docker/: Dockerfile  build.sh
docs/: _config.yml  dcdn-spec.md  index.md  newnode-spec.md
ios/: Bluetooth.h  Bluetooth.m  HTTPSRequest.h  HTTPSRequest.m  NetService.h  NetService.m
ios/Framework/: Info.plist  NewNode-iOS.h  NewNode.m  export_list  module.modulemap
ios/NewNode VPN/NewNode VPN/: AppDelegate.swift  DataVolume.swift  FontUpdater.swift  GradientView.swift  Info.plist  InfoViewController.swift  NewNode VPN-Bridging-Header.h  TimeFrame.swift  ViewController.swift
ios/NewNode VPN/NewNode VPN.xcodeproj/: project.pbxproj
ios/NewNode VPN/NewNode VPN/Assets.xcassets/Header.imageset/: Contents.json
ios/NewNode VPN/NewNode VPN/Assets.xcassets/inner_arc.imageset/: Contents.json
ios/NewNode VPN/NewNode VPN/Assets.xcassets/launch_image.imageset/: Contents.json
ios/NewNode VPN/NewNode VPN/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
ios/NewNode VPN/NewNode VPN/Colors.xcassets/gradient_off1.colorset/: Contents.json
ios/NewNode VPN/NewNode VPN/Colors.xcassets/gradient_off2.colorset/: Contents.json
ios/NewNode VPN/NewNode VPN/Colors.xcassets/gradient_on1.colorset/: Contents.json
ios/NewNode VPN/NewNode VPN/Colors.xcassets/gradient_on2.colorset/: Contents.json
ios/NewNode VPN/NewNode VPN/Colors.xcassets/info_bkg.colorset/: Contents.json
ios/NewNode VPN/NewNode VPN/Colors.xcassets/info_header.colorset/: Contents.json
ios/NewNode VPN/NewNode VPN/Colors.xcassets/info_text.colorset/: Contents.json
ios/NewNode VPN/NewNode VPN/LLSwitch/: LLSwitch.m
ios/NewNode VPN/Tunnel/: NewNode-Bridging-Header.h  PacketTunnelProvider.swift
ios/NewNode/NewNode/: Localizable.strings
ios/NewNode/NewNode/Assets.xcassets/info_white.imageset/: Contents.json
ios/NewNode/NewNode/Colors.xcassets/info_header.colorset/: Contents.json
ios/NewNode/Tunnel/: Info.plist
ios/examples/CustomHTTPProtocol/CustomHTTPProtocol/: AppDelegate.m  Info.plist  Launch Screen.storyboard  Main.storyboard  WebViewController.m  main.m
ios/examples/CustomHTTPProtocol/CustomHTTPProtocol.xcodeproj/: project.pbxproj
ios/examples/CustomHTTPProtocol/CustomHTTPProtocol/Core Code/: CustomHTTPProtocol.m
ios/examples/CustomHTTPProtocol/CustomHTTPProtocol/WebViewControllerHTML/: root.html
ios/vpn/NewNode/: NewNode-Bridging-Header.h
ios/vpn/NewNode VPN/: Info.plist  InfoViewController.swift  Localizable.strings  NetworkExtension+NewNode.swift  SpinnerView.swift  TunnelManager.swift  ViewController.swift
ios/vpn/NewNode VPN.xcodeproj/: project.pbxproj
ios/vpn/NewNode VPN/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/vpn/NewNode VPN/Assets.xcassets/cities.imageset/: Contents.json
ios/vpn/NewNode VPN/Assets.xcassets/earth_globe.imageset/: Contents.json
ios/vpn/NewNode VPN/Assets.xcassets/earth_map_blue.imageset/: Contents.json
ios/vpn/NewNode VPN/Assets.xcassets/earth_map_dark.imageset/: Contents.json
ios/vpn/NewNode VPN/Assets.xcassets/earth_map_gray.imageset/: Contents.json
ios/vpn/NewNode VPN/Assets.xcassets/gray_circle.imageset/: Contents.json
ios/vpn/NewNode VPN/Base.lproj/: Main.storyboard
ios/vpn/NewNode.xcodeproj/: project.pbxproj
ios/vpn/NewNode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/vpn/NewNode/Base.lproj/: LaunchScreen.storyboard
ios/vpn/Tunnel/: Info.plist  PacketTunnelProvider.swift  Tunnel.entitlements
newnode.xcodeproj/: project.pbxproj
newnode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
newnode.xcodeproj/xcshareddata/xcschemes/: newnode.xcscheme
(+89 files in other folders)
